GC. релиз.